@@ -161,11 +161,11 @@
             <option value="Salary">Salary</option>
             <option value="Hours">Hours</option>
           </select>
-          <label for="calculate">for Members Table</label>
+          <label for="calculate">for Employees Table</label>
           <input type="submit" name="AggregationQueryEmployee" value="Submit">
           <input type="submit" name="clear" value="Clear">
           <br>
-          <label for="calculate">Calculate Number of Members</label>
+          <label for="calculate">Calculate Number of Employees</label>
           <input type="submit" name="AggregationQueryCountEmployee" value="Submit">
         </form>
         </p>
@@ -235,6 +235,7 @@
                     <th> Salary </th>
                     <th> Age </th>
                     <th> Name </th>
+                    <th> Type </th>
                     <th> Address </th>
                     <th> Hours </th>
                     <th> Parking Num </th>
@@ -246,6 +247,7 @@
                     "<td>". $row["Salary"]. "</td>".
                     "<td>". $row["Age"]. "</td>".
                     "<td>". $row["Name"]. "</td>".
+                    "<td>". $row["Type"]. "</td>".
                     "<td>". $row["Address"]. "</td>".
                     "<td>". $row["Hours"]. "</td>".
                     "<td>". $row["Parking_Num"]. "</td>".
@@ -261,5 +263,51 @@
     ?>
     
 </div>
+
+
+<!-- Nested aggregation with group-by -->
+<div style="padding:20px;margin-top:30px;background-color:#ffffff;">
+    <h1>Nested aggregation with group-by</h1>
+    <h1>Average Age per Employee Type</h1>
+    
+        <!-- THIS DISPLAYS THE TABLE ON LINK OPEN -->
+    <?php
+        $servername = "localhost";
+        $username = "root";
+        $password = "root";
+        $dbname = "community-centre";
+
+        // Create connection
+        $conn = new mysqli($servername, $username, $password, $dbname);
+        // Check connection
+        if ($conn->connect_error) {
+            die("Connection failed: " . $conn->connect_error);
+        }
+
+        $sql = "SELECT Type, AVG(Age) as Average_Age from Employee GROUP BY Type;";
+        $result = $conn->query($sql);
+
+        if ($result->num_rows > 0) {
+            // output data of each row
+            echo "<table> <tr>
+                    <th> Employee Type</th>
+                    <th> Average Age </th>
+                    </tr>";
+            while($row = $result->fetch_assoc()) {
+                echo "<tr>";
+                echo "<td>". $row["Type"]. "</td>".
+                    "<td>". $row["Average_Age"]. "</td>";
+                echo "</tr>";
+            }
+            echo "</table>";
+        } else {
+            echo "0 results";
+        }
+
+        $conn->close();
+    ?>
+    
+</div>
+
 
 </html>
